ajout de l'illumination dans tous les shaders d'ombre, ajout de boutons pour tous les paramètres des shaders et pour choisir le shader : tout marche. Il faut encore régler les problèmes de shadow acne.

--- a/viewer/shaders/core-profile.qrc
+++ b/viewer/shaders/core-profile.qrc
@@ -26,5 +26,13 @@
         <file>PCSS.vert</file>
         <file>VSM.vert</file>
         <file>VSM.frag</file>
+        <file>textured_ESM.frag</file>
+        <file>textured_ESM.vert</file>
+        <file>textured_PCF.frag</file>
+        <file>textured_PCF.vert</file>
+        <file>textured_PCSS.frag</file>
+        <file>textured_PCSS.vert</file>
+        <file>textured_VSM.frag</file>
+        <file>textured_VSM.vert</file>
     </qresource>
 </RCC>
